Add custom themes, add message collapse,  jemalloc docker, recptcha option (#1)
* adding pikachu default theme

* link to the right version of the code

* update to 2.3.1 rc2 and add jigglypuff theme

* change jigglypuff to default and add another theme

* domain blocking as rake task

* minor rubocop

* verify severity

* whoops

* enable search

* es

* es

* newrelic

* adding tor for onion peering

* goto ruby 2.5.1

* go back to ruby 2.4

* netwerx

* i2p support

* i2p is a wash

* F O N T S

* make sure different version

* changing link for when registration is closed

* recaptcha support

* mastodon is now on newer node

* blah

* tag them differentlly

* blah

* add new relic config

* bleh

* new themes and new docker

* new themes and new docker

* shrink them toots

* fix collapse

* I am bad at the docker

* matching upstream

* update collapse to be a configable setting

* security fix plus latest fixes

* add a little more head room

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1001,8 +1001,8 @@ en:
     title: "%{instance} Terms of Service and Privacy Policy"
   themes:
     contrast: Mastodon (High contrast)
-    default: Mastodon (Dark)
-    mastodon-light: Mastodon (Light)
+    default: jigglypuff
+    mastodon-light: Mastodon (light)
   time:
     formats:
       default: "%b %d, %Y, %H:%M"
